--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -35,39 +35,12 @@ h2 {
     font-weight: normal;
 }
 
-svg {
-    background-color: #ffffff;
-}
-
-button {
-    padding: 10px 30px;
-    color: #000;
-    background-color: #fff;
-    border: 1px solid #333;
-    border-radius: 4px;
-    cursor: pointer;
-    outline: 0;
-    font-family: 'Helvetica', 'sans-serif';
-    font-size: 16px;
-}
-
-button:hover, button:active {
-	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
-	background-color:#f6f6f6;
-}
-
-.title, .axis-text {
-    transform-origin: center;
-    transform-box: fill-box;
-    text-anchor: middle;
-}
-
-.viz-container{
+.viz4-container{
     height: 100%;
     padding: 0 100px;
 }
 
-.graph {
+.viz4-graph {
     width: 100%;
     height: 100%;
     display: flex;
@@ -77,11 +50,6 @@ button:hover, button:active {
 
 .tick line{
     visibility: hidden;
-  }
-
-  .info {
-      pointer-events: none;
-      font-family: 'Roboto';
   }
 
   .axis text {
