--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -66,4 +66,13 @@ h2 {
     width: 600px;
     height: 400px;
     margin: auto;
+    padding: 100px 0;
   }
+
+  .viz6-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
