--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -69,7 +69,7 @@ h2 {
     padding: 100px 0;
   }
 
-  .viz6-container {
+  .viz6-container, .viz3-container {
     width: 100%;
     height: 100%;
     display: flex;
