--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -63,10 +63,13 @@ h2 {
   }
 
  .viz1-container {
-    width: 600px;
-    height: 400px;
-    margin: auto;
-    padding: 100px 0;
+    width:100%;
+    height: 100%;
+    /* margin: auto; */
+    /* padding: 100px 0; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .viz6-container {
@@ -75,4 +78,38 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+
+
+  :root {
+    --blue: #43A1D5;
+    --gold: #D5B048;
+    --navy_blue: #173E69;
+
+    --light_blue: #AEDDF8;
+    --light_gold: #F3DFA5;
+    --light_navy_blue: #3772B4;
+
+    --background: #FFFFFF;
+    --onBackground: #000000;
+}
+
+
+.welcome-title {
+    color: white;
+    font-family: 'Oswald';
+    font-size: 3.5rem;
+    position: inherit;
+    /* bottom: 3rem; */
+    left: 2rem; */
+}
+
+.page-container {
+    padding: 2rem 2rem 0 2rem;
+}
+
+.markdown-title {
+    font-family: 'Oswald';
+    color: var(--navy_blue);
 }
