--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -76,3 +76,11 @@ h2 {
     justify-content: center;
     align-items: center;
 }
+
+.graph {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
