--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto Slab', 'sans-serif';
+    font-family: 'Montserrat', 'sans-serif';
     font-size: 16px;
     background-color: #fff;
     color: #2A2B2E;
@@ -58,9 +58,9 @@ h2 {
       
   }
 
-  .axis path {
+  /* .axis path {
       opacity: 0;
-  }
+  } */
 
  .viz1-container {
     width: 600px;
@@ -76,3 +76,46 @@ h2 {
     justify-content: center;
     align-items: center;
 }
+
+
+
+.viz2-main {
+    height: 100%;
+    padding-right: 25px;
+}
+
+.viz2-container{
+    height: 100%;
+    padding: 0 100px;
+}
+
+.viz2-graph {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.viz2-legend-title {
+    font-weight: bold;
+}
+
+.viz2-legend {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.title, .axis-text {
+    transform-origin: center;
+    transform-box: fill-box;
+    text-anchor: middle;
+}
+
+.legend-element {
+    display: flex;
+    padding: 10px;
+}
+
+
