--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -58,10 +58,6 @@ h2 {
       
   }
 
-  /* .axis path {
-      opacity: 0;
-  } */
-
  .viz1-container {
     width:100%;
     height: 100%;
@@ -100,6 +96,20 @@ h2 {
     align-items: center;
 }
 
+
+.viz2-legend-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px; /* Adjust the height as needed */
+}
+.viz2-legend {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
 .graph {
     width: 100%;
     height: 100%;
@@ -107,17 +117,6 @@ h2 {
     justify-content: center;
     align-items: center;
 }
-
-.viz2-legend-title {
-    font-weight: bold;
-}
-
-.viz2-legend {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
 .title, .axis-text {
     transform-origin: center;
     transform-box: fill-box;
@@ -125,8 +124,8 @@ h2 {
 }
 
 .legend-element {
-    display: flex;
-    padding: 10px;
+    display: center;
+    padding: 20px;
 }
 
 
