--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -66,7 +66,7 @@ h2 {
     align-items: center;
   }
 
-  .viz6-container, .viz3-container {
+  .viz6-container, .viz3-container, .viz7-container {
     width: 100%;
     height: 100%;
     display: flex;
@@ -159,3 +159,11 @@ h2 {
     font-family: 'Oswald';
     color: var(--navy_blue);
 }
+
+.viz7-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
