--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -180,3 +180,12 @@ main {
 .tooltip-value {
     font-weight: normal;
 }
+
+.header {
+    background-image: linear-gradient(to bottom, transparent 30%, white), url('./images/morocco.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    height: auto;
+    min-height: 90%;
+  }
