--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -20,8 +20,7 @@ main {
     padding-right: 25px;
 }
 
-
-.viz4-container{
+.viz4-container {
     height: 100%;
     padding: 0 100px;
 }
@@ -34,25 +33,16 @@ main {
     align-items: center;
 }
 
-.tick line{
+.tick line {
     visibility: hidden;
-  }
+}
 
-  .axis text {
-      font-family: 'Roboto';
-      cursor: default;
-      
-  }
+.axis text {
+    font-family: 'Roboto';
+    cursor: default;
+}
 
- .viz1-container {
-    width:100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .viz6-container, .viz3-container, .viz7-container {
+.viz1-container {
     width: 100%;
     height: 100%;
     display: flex;
@@ -60,14 +50,22 @@ main {
     align-items: center;
 }
 
-
+.viz6-container,
+.viz3-container,
+.viz7-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .viz2-main {
     height: 100%;
     padding-right: 25px;
 }
 
-.viz2-container{
+.viz2-container {
     height: 100%;
     padding: 0 100px;
 }
@@ -80,19 +78,18 @@ main {
     align-items: center;
 }
 
-
 .viz2-legend-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px; /* Adjust the height as needed */
+    height: 100px;
 }
+
 .viz2-legend {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-
 
 .viz3-container {
     width: 100%;
@@ -101,7 +98,9 @@ main {
     justify-content: center;
     align-items: center;
 }
-.title, .axis-text {
+
+.title,
+.axis-text {
     transform-origin: center;
     transform-box: fill-box;
     text-anchor: middle;
@@ -112,7 +111,7 @@ main {
     padding: 20px;
 }
 
-  :root {
+:root {
     --blue: #43A1D5;
     --gold: #D5B048;
     --navy_blue: #173E69;
@@ -124,7 +123,6 @@ main {
     --background: #FFFFFF;
     --onBackground: #000000;
 }
-
 
 .welcome-title {
     color: var(--navy_blue);
@@ -155,13 +153,13 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
 
 .tooltip {
     position: absolute;
     pointer-events: none;
     opacity: 0;
-    background-color:black;
+    background-color: black;
     color: whitesmoke;
     padding: 5px;
     border: 1px solid #ccc;
@@ -169,7 +167,7 @@ main {
     font-family: 'Roboto Slab', 'serif';
     font-size: 12px;
     z-index: 9999;
-  }
+}
 
 #tooltip-title {
     font-family: 'Roboto Slab', 'serif';
@@ -188,4 +186,4 @@ main {
     position: relative;
     height: auto;
     min-height: 90%;
-  }
+}
