--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -155,6 +155,20 @@ main {
     align-items: center;
 }
 
+.viz6-tooltip {
+    position: absolute;
+    pointer-events: none;
+    opacity: 0;
+    background-color: black;
+    color: whitesmoke;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-family: 'Roboto Slab', 'serif';
+    font-size: 12px;
+    z-index: 9999;
+  }
+
 .tooltip {
     position: absolute;
     pointer-events: none;
